--- a/App/package.json
+++ b/App/package.json
@@ -14,6 +14,7 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "leaflet": "^1.9.4",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
@@ -21,6 +22,8 @@
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.17",
     "@tsconfig/node22": "^22.0.2",
+    "@types/geojson": "^7946.0.16",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^22.18.11",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
